--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
             <p>sana.sh19@yahoo.com</p>
             <h5>Adresse</h5>
             <p>
-              4 Square du tournaisis,<br>
-              80090 Amiens
+              80090 Amiens, France
             </p>
           </div>
            <!-- CONTACT END -->
@@ -55,7 +54,7 @@
             <h1>Compétences</h1>
             <div class="bars">
               <div class="bar">
-                <p>HTML/CSS</p>
+                <p>HTML5/CSS3</p>
               </div>
               <div class="bar">
                 <p>Javascript</p>
@@ -67,7 +66,19 @@
                 <p>PHP</p>
               </div>
               <div class="bar">
+                <p>Java</p>
+              </div>
+              <div class="bar">
+                <p>JQuery</p>
+              </div>
+              <div class="bar">
+                <p>Vue.js</p>
+              </div>
+              <div class="bar">
                 <p>Bootstrap</p>
+              </div>
+              <div class="bar">
+                <p>Symfony</p>
               </div>
               <div class="bar">
                 <p>UML</p>
@@ -79,10 +90,10 @@
                 <p>C++</p>
               </div>
               <div class="bar">
-                <p>Git/Github</p>
+                <p>Git/GitHub</p>
               </div>
               <div class="bar">
-                <p>Jqury</p>
+                <p>Responsive design</p>
               </div>
             </div>
           </div>
@@ -121,8 +132,17 @@
             <p>Nouvelles technologies</p>
             <p>La natation</p>
             <p>Snowboarding</p>
-          </div>
+          </div><br>
           <!-- CENTRE D'INTERET END -->
+
+          <!-- LANGUES -->
+          <div class="langue">
+            <h3>Langues</h3>
+            <p>Français</p>
+            <p>Persan</p>
+            <p>Anglais</p>
+          </div>
+          <!-- LANGUES END -->
         </div>
         <!-- PROFIL -->
         <div class="profil col-8">
@@ -131,11 +151,10 @@
               <span><i class="far fa-user"></i></span>Profil
             </h1>
             <p>
-              Je suis actuellment étudiant en formation professionnelle métiers
-              de l'informatique: Concepteur d'application web à Amiens . Je suis
-              à la recherche d'un stage(non rémunéré) pour une durée de 3 mois à
-              compter du 6 septembre 2021 dans le domaine du développement web &
-              mobile.
+              Je suis actuellment étudiante en formation professionnelle métier
+              de l'informatique: Concepteur développeuse d'applications à Amiens. Je suis
+              à la recherche d'un stage (non rémunéré) pour une durée de 3 mois à
+              compter du 6 septembre 2021.
             </p>
           </div>
           <!-- PROFIL END -->
@@ -150,28 +169,28 @@
               <span>2021-2022</span>
               <p>
                 Titre professionnel de niveau 6 (bac +3/+4) de concepteur/trice
-                développeur/se d'applications
+                développeur/se d'applications<br> Durée de 1490 heures (dont 420 heures en entreprise)
               </p>
             </div>
             <br>
             <div class="edu-group">
               <h4>TBDW</h4>
               <span>2021</span>
-              <p>Techniaque de base du développement d'applications</p>
+              <p>Techniaque de base du développement d'applications<br>Formation professionnalisante<br>Durée de 280 heures</p>
             </div>
             <br>
             <div class="edu-group">
-              <h4>DVE (Dynamique vers d'emploi)</h4>
+              <h4>DVE (Dynamique vers d'emploi - CLÉA)</h4>
               <span>2020</span>
               <p>
-                Certificat de connaissances et de compétences professionnelles
+                Certificat de connaissances et de compétences professionnelles<br>Durée de 600 heures
               </p>
             </div>
             <br>
             <div class="edu-group">
               <h4>LEA (Se former pour lire, écrire, agir)</h4>
               <span>2020</span>
-              <p>Domaine de formation : Français mise à niveau</p>
+              <p>Domaine de formation : Français mise à niveau<br>Durée de 300 heures</p>
             </div>
             <br>
             <div class="edu-group">
@@ -183,7 +202,7 @@
             <div class="edu-group">
               <h4>Diplôme Pré-universitaire</h4>
               <span>2016</span>
-              <p></p>
+              <p>Domaine de formation : Sciences humaines</p>
             </div>
             <br>
             <div class="edu-group">
