--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="header row">
         <div class="header-text">
           <h1>Sana Homaei</h1>
-          <p>Concepteur développeuse d'applications</p>
+          <p>Conceptrice développeuse d'applications</p>
         </div>
       </div>
       <div class="content row">
@@ -38,11 +38,11 @@
           <!-- CONTACT -->
           <div class="contact">
             <h4>Contact</h4>
-            <h5>Téléphone</h5>
-            <p>07-54-54-13-40</p>
-            <h5>E-mail</h5>
+            <h5>Téléphone :</h5>
+            <p>07 54 54 13 40</p>
+            <h5>E-mail :</h5>
             <p>sana.sh19@yahoo.com</p>
-            <h5>Adresse</h5>
+            <h5>Adresse :</h5>
             <p>
               80090 Amiens, France
             </p>
@@ -54,7 +54,7 @@
             <h1>Compétences</h1>
             <div class="bars">
               <div class="bar">
-                <p>HTML5/CSS3</p>
+                <p>HTML5 / CSS3</p>
               </div>
               <div class="bar">
                 <p>Javascript</p>
@@ -69,7 +69,7 @@
                 <p>Java</p>
               </div>
               <div class="bar">
-                <p>JQuery</p>
+                <p>jQuery</p>
               </div>
               <div class="bar">
                 <p>Vue.js</p>
@@ -90,11 +90,12 @@
                 <p>C++</p>
               </div>
               <div class="bar">
-                <p>Git/GitHub</p>
+                <p>Git / GitHub</p>
               </div>
               <div class="bar">
                 <p>Responsive design</p>
               </div>
+             
             </div>
           </div>
           <!-- COMPETENCES END -->
@@ -111,20 +112,18 @@
               <i class="fab fa-linkedin"></i></a
             ><br>
             <!-- Link Linkdin END -->
-
-            <!-- Link Facebook -->
-            <a
-               href="https://www.facebook.com/sana.hm.3150" 
-               target="_blank" 
-               title="Facebook"
-              >
-
-              <i class="fab fa-facebook-square"></i
-            ></a>
-            <!-- Link Facebook END -->
-          </div>
-          <br>
+         
+           <!-- Link Github -->
+           <a
+           href="https://github.com/Sana-hm"
+           target="_blank"
+           title="GitHub"
+         >
+           <i class="fab fa-github-square"></i></a
+         ><br>
+         <!-- Link Github END -->
           <!-- SUIVI END -->
+        </div>
 
           <!-- CENTRE D'INTERET -->
           <div class="hobby">
@@ -152,7 +151,7 @@
             </h1>
             <p>
               Je suis actuellment étudiante en formation professionnelle métier
-              de l'informatique: Concepteur développeuse d'applications à Amiens. Je suis
+              de l'informatique: Concepteur développeur d'applications à l'Afpa d'Amiens. Je suis
               à la recherche d'un stage (non rémunéré) pour une durée de 3 mois à
               compter du 6 septembre 2021.
             </p>
@@ -165,7 +164,7 @@
               <span><i class="fas fa-book"></i></span>Formations
             </h1>
             <div class="edu-group">
-              <h4>Concepteuse développeuse d'applications</h4>
+              <h4>Concepteur développeur d'applications</h4>
               <span>2021-2022</span>
               <p>
                 Titre professionnel de niveau 6 (bac +3/+4) de concepteur/trice
@@ -217,7 +216,7 @@
     </div>
     <!-- Link IMPRIMER -->
     <div>
-      <button class="printbtn" onclick="window.print()">Imprimer CV</button>
+      <button class="printbtn"><a class="telecharg" href="SANA-CV.pdf" target="_blank" title="CV-PDF">Télecharger</a></button>
     </div>
     <!-- Link IMPRIMER END -->
 
