--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <b>sana.sh19@yahoo.com</b>
             <h5>Adresse :</h5>
             <b>
-              80090 Amiens, France
+              31700 Blagnac, France
             </b>
           </div><br>
            <!-- CONTACT END -->
@@ -245,7 +245,7 @@
     </div>
     <!-- Link IMPRIMER -->
     <div>
-      <button class="printbtn"><a class="telecharg" href="HOMAEI-sana.pdf" target="_blank" title="CV-PDF">Télecharger</a></button>
+      <button class="printbtn"><a class="telecharg" href="HOMAEI-sana.pdf1.pdf" target="_blank" title="CV-PDF">Télecharger</a></button>
     </div>
     <!-- Link IMPRIMER END -->
 
