--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV online sana homaei</title>
+    <title>Sana HOMAEI</title>
     <!--FONTAWESOME CSS-->
     <link
       rel="stylesheet"
@@ -25,7 +25,7 @@
     <div class="print-area">
       <div class="header row">
         <div class="header-text">
-          <h1>Sana Homaei</h1>
+          <h1>Sana HOMAEI</h1>
           <p>Conceptrice développeuse d'applications</p>
         </div>
       </div>
@@ -112,13 +112,13 @@
                   <p>Wordpress
                   </p>
                 </div>
+                <div class="bar">
+                  <p>PrestaShop
+                  </p>
+                </div>
               </div>
             </div>
             <!-- COMPETENCES END -->
-
-            
-
-
           <!-- SUIVI -->
           <div class="suivi">
             <h3>SUIVEZ-MOI</h3>
@@ -173,7 +173,7 @@
               <p>
                 - Collaborer au développement un projet web pour la mairie<br>
                 - Concevoir une base de données et la mettre en place<br>
-                - Développer la partie front-end et la partie back-end duproject
+                - Développer la partie front-end et la partie back-end du project
                 <p>ADICO , Beauvais</p> 
               </p>
           </div>
@@ -188,8 +188,8 @@
               <h4>Concepteur développeur d'applications</h4>
               <span>Mars - Décembre 2021</span>
               <p>
-                Titre professionnel de niveau 6 (bac +3/+4) de concepteur/trice
-                développeur/se d/applications Durée de 1490 heures (dont 420 heures en entreprise)
+                Titre professionnel de niveau 6 (Bac +3/+4) de Concepteur
+                développeur d'applications, Durée de 1490 heures (dont 420 heures en entreprise)
               </p>
               <p>AFPA , Amiens</p>
             </div>
@@ -197,7 +197,7 @@
             <div class="edu-group">
               <h4>TBDW</h4>
               <span>Janvier - Décembre 2021</span>
-              <p>Techniaque de base du développement d'applications<br>Formation professionnalisante</p>
+              <p>Technique de base du développement d'applications<br>Formation professionnalisante</p>
               <p>AFPA , Amiens</p>
             </div>
             <br>
@@ -235,7 +235,7 @@
               <h4>Baccalauréat</h4>
               <span>2014- 2015</span>
             
-              <p>Bac (général, technique ouprofessionnel)ou équivalent (NV4)<br>Domaine de formation : Sciences humaines</p>
+              <p>Bac (général, technique ou professionnel) ou équivalent (NV4)<br>Domaine de formation : Sciences humaines</p>
               <p>Ispahan , IRAN</p>
             </div>
           </div>
